
   Table of Contents

   1. What's New
                1.1. Enhancements
                1.2. New Tools

   2. Migration Issues
                2.1. Database Conversion
                2.2. Framework Changes
                2.3. Provider Changes
                2.4. Skin Changes

   3. Maintenance Branch

   4. Fixes Included in this Release

   5. Open Issues

1. What's New

  1.1. Enhancements

    1.1.1. Framework Refactoring

   The 2.2 release marks the culmination of a significant effort to
   restructure the framework into more logical functional/architectural
   units, paving the way for multiple, focused teams to work in parallel on
   moving the framework and legacy code forward.

   These changes in themselves do not have a direct functional impact, but
   they are echoed by a change in the organization of Sakai's subversion
   repository, and many services and packages have different names from those
   in 2.1. To see more discussion of migration issues that may result, see
   below.

    1.1.2. Group Awareness

   Group awareness has been extended to three additional tools: Resources,
   Assignments, and Schedule. That is to say, the contents of each of those
   tools can have their access restricted to specific groups, as they are
   defined by site maintainers in the Site Info tool.

    1.1.3. EID/UID Separation

   For the last few releases we've been working to introduce the concept of
   "internal" and "external" identifiers in Sakai in the user records. We
   started with a single identifier that had to play both of these roles, and
   have been tweaking the code to separate these out. For 2.2 we have
   completed this separation. It is now possible for an institution to, for
   example, alter the enterprise IDs of their users without losing access to
   their sites and materials in Sakai. For a thorough discussion of these
   changes, see the doc reference/docs/architecture/sakai_id_eid.doc (or in
   subversion at: